ASUSFETest/src/objects/Organization__c.object
<CustomObject>
    <description>Listing of all University Organizations (Schools and/or Departments)</description>
    <fields>
        <fullName>Organization_Code__c</fullName>
        <externalId>true</externalId>
        <label>Organization Code</label>
        <length>25</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Organization_Status__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Organization Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Relationship to the Program table (colleges)</description>
        <label>Program</label>
        <referenceTo>Program__c</referenceTo>
        <relationshipLabel>Organizations</relationshipLabel>
        <relationshipName>Organizations</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Organization</label>
    <listViews>
        <fullName>All_Organizations</fullName>
        <columns>NAME</columns>
        <columns>Organization_Code__c</columns>
        <columns>Program__c</columns>
        <columns>Organization_Status__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Organizations</label>
    </listViews>
    <nameField>
        <label>Organization Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Organizations</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>